cambios en el link al video

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main class="container">
       <video class="movie">
-        <source src="./assets/BigBuckBunny.mp4" />
+        <source src="https://cristianbonomo.com.ar/video/BigBuckBunny.mp4" />
       </video>
 
       <button id="playButton">Play/Pause</button>
