--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main class="container">
       <video class="movie">
-        <source src="https://cristianbonomo.com.ar/video/BigBuckBunny.mp4" />
+        <source src="./assets/BigBuckBunny.mp4" />
       </video>
 
       <button id="playButton">Play/Pause</button>
@@ -260,6 +260,6 @@
       </li>
     </ul>
 
-    <script type="module" src="./assets/index.ts"></script>
+    <script type="module" src="./assets/index.js"></script>
   </body>
 </html>
